# XOCO.0

./: .gitignore  LICENSE  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/hito/xoco0/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hito/xoco0/: MainActivity.kt
android/app/src/main/java/com/hito/xoco0/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/hito/xoco0/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/clients/: football_api.py  gemini.py
backend/app/core/: config.py
backend/app/prompts/: assistant_prompt.py  match_prompt.py  player_prompt.py
backend/app/routes/: ai.py  football.py  health.py
