[project]
name = "backend"
version = "0.1.0"
description = "XOCO.0 AI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "httpx==0.28.1",
    "google-genai==1.28.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "loguru==0.7.3",
]
